@@ -51,7 +51,7 @@ public class CamelHumpMatcher extends PrefixMatcher {
     for (String s : CompletionUtilCore.iterateLookupStrings(element)) {
       FList<MatcherTextRange> ranges = myCaseInsensitiveMatcher.matchingFragments(s);
       if (ranges == null) continue;
-      if (ranges.isEmpty() || skipUnderscores(s) >= Objects.requireNonNull(ranges.get(0)).getStartOffset()) {
+      if (ranges.isEmpty() || skipUnderscores(s) >= Objects.requireNonNull(ranges.getFirst()).getStartOffset()) {
         return true;
       }
     }
